--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@biomejs/biome": "^1.6.4",
     "@crxjs/vite-plugin": "2.0.0-beta.23",
     "@types/chrome": "^0.0.266",
+    "@types/firefox-webext-browser": "^120.0.3",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
