--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,18 +7,10 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "types": [
-      "node"
-    ],
+    "types": ["node", "firefox-webext-browser"],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
-  "include": [
-    "vite.config.ts",
-    "manifest.ts",
-    "./src/lib/activities/types.ts"
-  ]
+  "include": ["vite.config.ts", "manifest.ts", "./src/lib/activities/types.ts"]
 }
