feat: display basic user data on header

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "4.0.0-alpha.14"
+    "tailwindcss": "4.0.0-alpha.14",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
